plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.healthcare.psychologist'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


    // -------------  Use for Validition
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'


//  --------------  Use for  Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'


    // ------------    Use for Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    // build.gradle (dependencies section)
//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'


    // For Email Otp Genrate

    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // JWT Dependencies

    dependencies {

        // JWT API
        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

        // JWT Implementation
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'

        // JWT Jackson (JSON support)
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    }





}



tasks.named('test') {
    useJUnitPlatform()
}
